
[profile.bench]
debug = true

[profile.release]
#lto = true

[workspace]
members = [
    "memflow-daemon",
    "memflow-client",
    "memflow-cli",
    "memflow-framework",
    "memflow-daemon-connector",
    "memflow-node",
]
default-members = [
    "memflow-daemon",
    "memflow-client",
    "memflow-cli",
    "memflow-framework",
    "memflow-daemon-connector",
    "memflow-node",
]
