
[profile.bench]
debug = true

[profile.release]
#lto = true
debug = true

[workspace]
members = [
    "memflow-daemon",
    "memflow-client",
    "memflow-cli",
    "memflow-framework",
    "memflow-daemon-connector",
    "memflow-node",
	"filer",
]
default-members = [
    "memflow-daemon",
    "memflow-client",
    "memflow-cli",
    "memflow-framework",
    "memflow-daemon-connector",
    "memflow-node",
	"filer",
]
