[profile.bench]
debug = true

[profile.release]
#lto = true
debug = true

[workspace]
resolver = "1"
members = [
	"cloudflow",
    "cloudflow-node",
	"filer",
	"filer-fuse",
	"filer-tokio",
	"cloudflow-minidump"
]
default-members = [
	"cloudflow",
    "cloudflow-node",
	"filer",
	"filer-fuse",
	"filer-tokio",
	"cloudflow-minidump"
]