[package]
name = "cloudflow-minidump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minidump-writer = { git = "https://github.com/h33p/minidump-writer" }
memflow = "=0.2.0-beta11"
abi_stable = "0.10"
cglue = { version = ">=0.2.5", default-features = false, features = ["layout_checks"] }
filer = { version = "0.1", path = "../filer" }
cloudflow = { version = "0.1", path = "../cloudflow" }
