[package]
name = "cloudflow-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cloudflow"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudflow = { path = "../cloudflow" }
anyhow = "1"
memflow = "0.2"
filer = { version = "0.1", path = "../filer" }
filer-fuse = { version = "0.1", path = "../filer-fuse" }
cloudflow-minidump = { version = "0.1", path = "../cloudflow-minidump" }
simplelog = "^0.12.1"
log = "0.4"
clap = { version = "4.4", features = ["cargo"] }
sudo = "0.6"
