[package]
name = "cloudflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memflow = "0.2"
abi_stable = "0.10"
cglue = { version = ">=0.2.5", default-features = false, features = ["layout_checks"] }
filer = { version = "0.1", path = "../filer" }
once_cell = "1.9"
num = "0.4"
dashmap = "5"
