[package]
name = "filer-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
filer = { version = "0.1", path = "../filer" }
cglue = "0.2"
async-trait = "0.1"
