[package]
name = "flow-daemon"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[dependencies]
flow-core = { git = "ssh://git@github.com/memflow/memflow.git", branch = "dev" }
flow-win32 = { git = "ssh://git@github.com/memflow/memflow.git", branch = "dev" }
flow-coredump = { git = "ssh://git@github.com/memflow/memflow.git", branch = "dev" }
log = "0.4.8"
simple_logger = "1.0.1"

# tokio
tokio = { version = "0.2.0", features = ["full"] }
tokio-util = { version = "0.3.0", features = ["full"] }
bytes = "0.5"
futures = "0.3.0"
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.0"
time = "0.1"
