[package]
name = "memflow"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[dependencies]
memflow-daemon = { path = "../memflow-daemon" }
clap = { version = "2.33.0" }
log = "0.4.8"
simple_logger = "1.0.1"
url = "2.1"
prettytable-rs = "0.8"

# tokio
tokio = { version = "0.2.0", features = ["full"] }
tokio-util = { version = "0.3.0", features = ["full"] }
tokio-serde = "0.6"
bytes = "0.5"
futures = "0.3.0"
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.0"
time = "0.1"

# TODO: only on linux
libc = "0.2.51"
