[package]
name = "memflow-cli"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"
license = "MIT"
description = "memflow daemon command line interface"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow-cli"
readme = "../README.md"
keywords = [ "memflow", "introspection", "memory" ]
categories = [ "api-bindings", "memory-management", "os" ]

[dependencies]
memflow-daemon = { path = "../memflow-daemon" }
memflow-client = { path = "../memflow-client" }
clap = { version = "2.33" }
log = "0.4.8"
simple_logger = "1.11"
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
libc = "0.2.51"
