[package]
name = "memflow-daemon-connector"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"
license = "MIT"
description = "daemon remote connector for the memflow physical memory introspection framework"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow-cli"
readme = "README.md"
keywords = [ "memflow", "introspection", "memory" ]
categories = [ "api-bindings", "memory-management", "os" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow = { version = "0.1", features = ["inventory"] }
memflow-win32 = "0.1"
memflow-derive = { version = "0.1" }
memflow-daemon = { path = "../memflow-daemon" }
memflow-client = { path = "../memflow-client" }
log = { version = "0.4.8", default-features = false }

tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }

[dev-dependencies]
clap = "2.33.0"
simple_logger = "1.0.1"

[features]
default = []
inventory = []

[[example]]
name = "read_phys"
path = "examples/read_phys.rs"

[[example]]
name = "read_virt"
path = "examples/read_virt.rs"
