[package]
name = "memflow-daemon"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"
license = "MIT"
description = "memflow daemon service"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow-cli"
readme = "../README.md"
keywords = [ "memflow", "introspection", "memory" ]
categories = [ "api-bindings", "memory-management", "os" ]

[dependencies]
memflow = { version = "0.1", features = ["inventory", "serde_derive"] }
memflow-win32 = { version = "0.1", features = ["serde_derive"] }
clap = { version = "2.33.0" }
log = "0.4.8"
simplelog = "0.8.0"
url = "2.1"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["v4"] }
minidump-writer = { git = "https://github.com/h33p/minidump-writer" }

# tokio
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.4", features = ["full"] }
tokio-serde = { version = "0.6", features = ["json"] }
futures = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
time = "0.1"

libc = "0.2.51"
pelite = { version = "0.9", features = ["serde"] }
sudo = { git = "https://gitlab.com/Heep/sudo.rs.git" }

# gdb
gdbstub = "=0.2.1"

[target.'cfg(not(windows))'.dependencies]
fuse_mt = "0.5"
