[package]
name = "memflow-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memflow = { git = "https://github.com/memflow/memflow", branch = "next" }
abi_stable = "0.10"
cglue = { version = ">=0.2.5", git = "https://github.com/h33p/cglue", branch = "main", default-features = false }
dashmap = "5"
sharded-slab = "0.1"
