[package]
name = "memflow-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memflow-framework = { path = "../memflow-framework" }
anyhow = "1"
ptree = "0.4"
rand = "0.8"
rand_xorshift = "0.3"
memflow = { git = "https://github.com/memflow/memflow", branch = "next" }
