[package]
name = "memflow-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudflow = { path = "../cloudflow" }
anyhow = "1"
ptree = "0.4"
rand = "0.8"
rand_xorshift = "0.3"
memflow = "^0.2.0-beta"
filer = { version = "0.1", path = "../filer" }
filer-fuse = { version = "0.1", path = "../filer-fuse" }
cloudflow-minidump = { version = "0.1", path = "../cloudflow-minidump" }
simplelog = "^0.11.1"
log = "0.4"
